--- a/DriveToTravel/app/src/main/res/values-sr/strings.xml
+++ b/DriveToTravel/app/src/main/res/values-sr/strings.xml
@@ -19,6 +19,21 @@
     <string name="language_settings">Jezik podesavanje</string>
     <string name="rsLanguage">Srpski</string>
 
+    <string name="title_menu_passanger_transport">Vožnje</string>
+    <string name="title_menu_passanger_search_transport">Pretraga vožnji</string>
+    <string name="title_menu_passanger_my_transport">Moje vožnje</string>
+    <string name="title_menu_passanger_settings">Podešavanja profila</string>
+
+    <string name="title_activity_search_main">Pronađi vožnju</string>
+    <string name="start_location_activity_search_main">Početna lokacija</string>
+    <string name="stop_location_activity_search_main">Krajnja lokacija</string>
+    <string name="time_label_activity_search_main">Vreme: </string>
+    <string name="date_label_activity_search_main">Datum: </string>
+    <string name="distance_label_activity_search_main">Rastojanje: </string>
+    <string name="search_error_message">Molimo unesite sve podatke!</string>
+    <string name="search_by_data">Pretraga po podacima</string>
+    <string name="search_by_distance">Pretraga po rastojanju</string>
+
     <string-array name="lang_select">
         <item>English</item>
         <item>Serbian</item>
