--- a/DriveToTravel/app/src/main/res/values/strings.xml
+++ b/DriveToTravel/app/src/main/res/values/strings.xml
@@ -31,4 +31,20 @@
     <string name="title_activity_activity_driver_main">ActivityDriverMain</string>
     <string name="title_activity_activity_show_tours">ActivityShowTours</string>
     <string name="title_activity_activity_tour_details">ActivityTourDetails</string>
+
+    <string name="title_activity_passanger_main">Home</string>
+    <string name="title_menu_passanger_my_transport">My transport</string>
+    <string name="title_menu_passanger_transport">Transport</string>
+    <string name="title_menu_passanger_search_transport">Search transport</string>
+    <string name="title_menu_passanger_settings">Profile settings</string>
+
+    <string name="title_activity_search_main">Search ride</string>
+    <string name="start_location_activity_search_main">Start location</string>
+    <string name="stop_location_activity_search_main">Stop location</string>
+    <string name="time_label_activity_search_main">Time: </string>
+    <string name="date_label_activity_search_main">Date: </string>
+    <string name="distance_label_activity_search_main">Distance: </string>
+    <string name="search_error_message">Please provide all data!</string>
+    <string name="search_by_data">Search by data</string>
+    <string name="search_by_distance">Search by distance</string>
 </resources>
