--- a/DriveToTravel/app/src/main/res/values/strings.xml
+++ b/DriveToTravel/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">Drive2Travel</string>
-    <string name="name">Name</string>
-    <string name="surname">Surname</string>
+    <string name="name">First name</string>
+    <string name="surname">Last name</string>
     <string name="phoneNumber">Phone number</string>
-    <string name="eMail">e-mail</string>
+    <string name="eMail">E-mail</string>
     <string name="carModel">Car model</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
@@ -21,6 +21,13 @@
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="title_activity_main22">Main22Activity</string>
+
+    <string name="enter_first_name_message">Enter first name</string>
+    <string name="enter_last_name_message">Enter last name</string>
+    <string name="enter_username_message">Enter username</string>
+    <string name="enter_password_message">Enter password</string>
+
+    <string name="error_to_store_driver_message">Error to store driver. Try in a few minutes again</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -47,4 +54,6 @@
     <string name="search_error_message">Please provide all data!</string>
     <string name="search_by_data">Search by data</string>
     <string name="search_by_distance">Search by distance</string>
+
+    <string name="title_activity_tour_details">Tour details</string>
 </resources>
