Update user location service changes
User id added for indentifying user which location has to be updated

--- a/DriveToTravel/app/src/main/res/values/strings.xml
+++ b/DriveToTravel/app/src/main/res/values/strings.xml
@@ -74,5 +74,6 @@
     <string name="update_tour_rank">/tour/update_rank</string>
     <string name="store_user">/user/register</string>
     <string name="login_user">/user/login</string>
+    <string name="update_user_location">/user/update_location</string>
 
 </resources>
