--- a/DriveToTravel/app/src/main/res/values/strings.xml
+++ b/DriveToTravel/app/src/main/res/values/strings.xml
@@ -86,5 +86,6 @@
     <string name="login_user">/user/login</string>
     <string name="update_user_location">/user/update_location</string>
     <string name="remove_friend">/user/remove_friend</string>
+    <string name="title_activity_tour_map">Tour map</string>
 
 </resources>
